# ColonyOS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  START_HERE.md  STRATEGIC_DIRECTIONS.md  TELEMETRY.md  docker-compose.yml  docker-entrypoint.sh  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt  run_precommit_tests.py  slack-app-manifest.yaml
.colonyos/: config.yaml  daemon_state.json  directions.md  learnings.md
Formula/: colonyos.rb
cOS_prds/: 20260317_083203_prd_we_should_be_able_to_offer_the_users_prebuilt_personas_when_they_initialize.md  20260317_090603_prd_persona_review_phase_and_cos_directory_prefix.md  20260317_133813_prd_autonomous_ceo_stage.md  20260317_144239_prd_add_a_review_driven_fix_loop_to_the_orchestrator_pipeline_when_the_decision_gate.md  20260317_155508_prd_add_a_resume_run_id_flag_to_colonyos_run_that_resumes_a_previously_failed_run_fr.md  20260317_163656_prd_i_want_this_to_be_super_easy_to_set_up_if_you_re_a_dev_you_should_be_able_to_be.md  20260317_172645_prd_rich_streaming_terminal_ui_for_agent_phases.md  20260317_180029_prd_add_a_colonyos_review_branch_command_that_runs_only_the_review_fix_loop_and_opti.md  20260317_183545_prd_add_a_configurable_post_implement_verification_gate_that_runs_the_project_s_test.md  20260317_192516_prd_add_a_colonyos_review_branch_cli_command_that_runs_only_the_review_fix_loop_and.md  20260317_200233_prd_add_a_cross_run_learnings_system_that_automatically_extracts_patterns_from_revie.md  20260317_235155_prd_add_github_issue_integration_to_colonyos_so_users_can_point_the_pipeline_at_an_i.md  20260318_001555_prd_add_a_colonyos_stats_cli_command_that_reads_all_persisted_runlog_json_files_from.md  20260318_003243_prd_add_per_phase_model_override_configuration_to_colonyos_currently_config_yaml_has.md  20260318_075437_prd_the_latest_runs_added_some_new_commands_however_they_did_not_update_the_readme_n.md  20260318_081144_prd_the_option_to_connect_to_slack_my_vision_for_this_in_the_future_is_that_it_monit.md  20260318_105239_prd_there_should_be_an_easy_way_to_install_this_on_a_repository_with_curl_npm_pip_br.md  20260318_150423_prd_let_s_change_the_way_the_reviews_directory_is_organized_reviews_by_specific_pers.md  20260318_154057_prd_add_a_colonyos_ci_fix_command_and_integrate_ci_awareness_into_the_deliver_phase.md  (+51 more)
(+1576 files in other folders)
