[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colonyos-pm-workflow"
version = "0.1.0"
description = "Autonomous PM workflow primitives for ColonyOS."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.basedpyright]
include = ["src", "tests", "scripts"]
extraPaths = ["src"]
