[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colonyos"
version = "0.1.0"
description = "Autonomous agent loop that turns prompts into shipped PRs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.49",
    "rich>=13.0",
]

[project.scripts]
colonyos = "colonyos.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colonyos = ["instructions/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
