[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colonyos"
dynamic = ["version"]
description = "Autonomous agent loop that turns prompts into shipped PRs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.48",
    "rich>=13.0",
]

[project.scripts]
colonyos = "colonyos.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colonyos = ["instructions/*.md", "web_dist/**"]

[project.optional-dependencies]
dev = ["pre-commit>=4.0", "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-xdist>=3.0", "colonyos[ui]", "colonyos[tui]"]
slack = ["slack-bolt[socket-mode]>=1.18"]
tui = ["textual>=0.40", "janus>=1.0"]
ui = ["fastapi>=0.100", "uvicorn>=0.20"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "-n auto"
asyncio_mode = "auto"
markers = ["serial: run test sequentially (no xdist)"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
